# mol2grep

./: .gitignore  Cargo.toml  README.md
data/: input_files.txt  input_list.txt  zinc_list.tsv  zinc_list.txt
src/: file_io.rs  main.rs  mol2.rs  mol2utils.rs  query.rs  test.rs
