[package]
name = "mol2grep"
version = "0.1.0"
authors = ["noamteyssier <nb.teyssier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
flate2 = "1.0.19"
regex = "1.4.5"
rayon = "1.5.0"
indicatif = {version = "*", features = ["rayon"]}
