[package]
name = "mol2grep"
version = "0.1.1"
authors = ["noamteyssier <nb.teyssier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
flate2 = "1.0.19"
regex = "1.6"
rayon = "1.5.3"
indicatif = {version = "*", features = ["rayon"]}
rand = "0.8.3"
serial_test = "0.5.1"
